--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -23,32 +23,62 @@
     </div>
 
     <!-- List Movies -->
-    <div class="w-100 d-flex flex-row justify-content-between flex-wrap" *ngIf="products && products.length">
-      <div class="d-flex flex-column all-info justify-content-end mb-5" *ngFor="let movies of filteredMovies">
-        <div class="name-link">
-          <a class="text-white" [routerLink]="['/movies-list/detail', movies.imdbID, movieSearched]">
-            <p class="text-title">{{ movies.Title }}</p>
-          </a>
+    <div class="w-100 d-flex flex-row justify-content-between flex-wrap mb-5" *ngIf="products && products.length">
+      <div class="d-flex flex-column all-information justify-content-between mb-5" *ngFor="let movies of filteredMovies">
+
+        <div class="card mb-3 new-card">
+          <h3 class="card-header">
+            <a class="text-title text-white" [routerLink]="['/movies-list/detail', movies.imdbID, movieSearched]">
+              <p class="text-title mt-2">{{ movies.Title }}</p>
+            </a>
+          </h3>
+          <div class="card-body">
+            <h5 class="card-title">Special title treatment</h5>
+
+            <img class="img-thumbnail" *ngIf="movies.Poster" (error)="movies.Poster = false" [src]="movies.Poster" [title]="movies.Title" />
+            <img *ngIf="!movies.Poster" src="./assets/images/no-image.png" class="img-thumbnail no-image center-block"/>  
+          </div>
+         
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">
+              <span class="year-type mr-2">Year:</span>
+              {{ movies.Year }}
+            </li>
+            <li class="list-group-item">
+              <span class="year-type mr-2">Type:</span>
+              {{ movies.Type }}
+            </li>
+          </ul>
         </div>
 
-        <div class="my-image">
+      
+        <!-- <div class="my-image">
           <img class="img-thumbnail" *ngIf="movies.Poster" (error)="movies.Poster = false" [src]="movies.Poster" [title]="movies.Title" />
           <img *ngIf="!movies.Poster" src="./assets/images/no-image.png" class="img-thumbnail no-image center-block"/>  
-        </div>
+        </div> -->
 
-        <div class="d-flex flex-column justify-content-start text-white mt-3">
-          <div class="d-flex flex-row align-items-center text-white">
-            <span class="year-type mt-1 mr-3">Year:</span>
-            {{ movies.Year }}
+       <!--  <div class="d-flex flex-column justify-content-between">
+          <div class="name-link">
+            <a class="text-white" [routerLink]="['/movies-list/detail', movies.imdbID, movieSearched]">
+              <p class="text-title mt-2">{{ movies.Title }}</p>
+            </a>
           </div>
   
-          <div class="d-flex flex-row align-items-center text-white">
-            <span class="year-type mt-1 mr-3">Type:</span>
-            {{ movies.Type }}
+          <div class="d-flex flex-column text-white">
+            <div class="d-flex flex-row text-white">
+              <span class="year-type mr-2">Year:</span>
+              {{ movies.Year }}
+            </div>
+    
+            <div class="d-flex flex-row text-white">
+              <span class="year-type mr-2">Type:</span>
+              {{ movies.Type }}
+            </div>
           </div>
-        </div>
+  
+           <pm-star [rating]='movies.starRating' (ratingClicked)='onRatingClicked($event)'></pm-star>
 
-         <pm-star [rating]='movies.starRating' (ratingClicked)='onRatingClicked($event)'></pm-star>
+        </div> -->
       </div>
     </div>
   </div>
