Fix styles cards done

--- a/src/app/products/product-detail.component.html
+++ b/src/app/products/product-detail.component.html
@@ -6,7 +6,7 @@
     </div>
   </div>
 
-  <div class="card-body ng-body">
+  <div class="card-body card-detail ng-body">
 
     <div class="d-flex flex-row">
       <div class="w-75 mr-4">
