--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -4,6 +4,7 @@
   <div class="panel-heading my-4 my-text-warning">
     <h3>{{ pageTitle }}</h3>
   </div>
+
   <div class="panel-body wrapper">
     <div class="w-100 d-flex justify-content-between align-items-start mb-4">
       <span class="badge my-badge-warning text-white align-items-center p-2">
@@ -26,62 +27,37 @@
     <div class="w-100 d-flex flex-row justify-content-between flex-wrap mb-5" *ngIf="products && products.length">
       <div class="d-flex flex-column all-information justify-content-between mb-5" *ngFor="let movies of filteredMovies">
 
-        <div class="card mb-3 new-card">
-          <h3 class="card-header">
-            <a class="text-title text-white" [routerLink]="['/movies-list/detail', movies.imdbID, movieSearched]">
-              <p class="text-title mt-2">{{ movies.Title }}</p>
-            </a>
-          </h3>
-          <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
+        <a class="wrapper-card text-title" [routerLink]="['/movies-list/detail', movies.imdbID, movieSearched]">
+          <div class="card mb-3 new-card">
+            <h3 class="card-header">
+              <p class="text-title text-white mt-2">{{ movies.Title }}</p>
+            </h3>
 
-            <img class="img-thumbnail" *ngIf="movies.Poster" (error)="movies.Poster = false" [src]="movies.Poster" [title]="movies.Title" />
-            <img *ngIf="!movies.Poster" src="./assets/images/no-image.png" class="img-thumbnail no-image center-block"/>  
-          </div>
-         
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">
-              <span class="year-type mr-2">Year:</span>
-              {{ movies.Year }}
-            </li>
-            <li class="list-group-item">
-              <span class="year-type mr-2">Type:</span>
-              {{ movies.Type }}
-            </li>
-          </ul>
-        </div>
-
-      
-        <!-- <div class="my-image">
-          <img class="img-thumbnail" *ngIf="movies.Poster" (error)="movies.Poster = false" [src]="movies.Poster" [title]="movies.Title" />
-          <img *ngIf="!movies.Poster" src="./assets/images/no-image.png" class="img-thumbnail no-image center-block"/>  
-        </div> -->
-
-       <!--  <div class="d-flex flex-column justify-content-between">
-          <div class="name-link">
-            <a class="text-white" [routerLink]="['/movies-list/detail', movies.imdbID, movieSearched]">
-              <p class="text-title mt-2">{{ movies.Title }}</p>
-            </a>
-          </div>
-  
-          <div class="d-flex flex-column text-white">
-            <div class="d-flex flex-row text-white">
-              <span class="year-type mr-2">Year:</span>
-              {{ movies.Year }}
+            <div class="card-body pt-0">
+              <i class="fas fa-video watch hidden"></i>
+              <img class="img-thumbnail" *ngIf="movies.Poster" (error)="movies.Poster = false" [src]="movies.Poster"
+                [title]="movies.Title" />
+              <img *ngIf="!movies.Poster" src="./assets/images/no-image.png"
+                class="img-thumbnail no-image center-block" />
             </div>
-    
-            <div class="d-flex flex-row text-white">
-              <span class="year-type mr-2">Type:</span>
-              {{ movies.Type }}
-            </div>
-          </div>
-  
-           <pm-star [rating]='movies.starRating' (ratingClicked)='onRatingClicked($event)'></pm-star>
 
-        </div> -->
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">
+                <span class="year-type mr-2">Year:</span>
+                {{ movies.Year }}
+              </li>
+              <li class="list-group-item">
+                <span class="year-type mr-2">Type:</span>
+                {{ movies.Type }}
+              </li>
+            </ul>
+          </div>
+        </a>
+
       </div>
     </div>
   </div>
+
 </div>
 
 <div *ngIf="errorMessage" class="alert alert-dismissible alert-danger text-white">
