--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,8 +8,11 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts/";
 $white: #ffffff;
 $white-light: #e0e0e0;
 $bordou: #8e0e00;
+$border-card: #8c3333;
 $gold: #e2c043;
+$icon-gold: #d8a718;
 $gradient-dark: #1f1c18;
+$back-card: #1f1e1e;
 $gray: #839496;
 $pink: #f9a6a6;
 $color-badge: #cb4b16;
@@ -108,53 +111,92 @@ body {
 
   .all-information {
     width: 280px;
-  
-    .my-image {
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-      max-height: 326px;
-  
-      img {
-        height: 268px !important;
-      }
-    }
-  
-    .new-card {
-      min-height: 607px;
-  
-      .card-header {
-        background: #1f1e1e;
-  
-        .text-title {
-          font-size: 0.9rem;
-          text-transform: uppercase;
-          font-weight: 700;
-          text-decoration: none !important;
-  
-          &:hover {
-            color: #ff90af;
+
+    .wrapper-card {
+      text-decoration: none !important;
+
+      .new-card {
+        min-height: 607px;
+        border: none;
+
+        .card-header {
+          background: $back-card;
+
+          .text-title {
+            font-size: 0.9rem;
+            text-transform: uppercase;
             font-weight: 700;
-            text-decoration: none !important;
+
+            &:hover {
+              color: #ff90af !important;
+              font-weight: 700;
+            }
           }
         }
+
+       /*  .watch {
+          position: absolute;
+          margin: 0 auto;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          top: 0;
+          bottom: 106px;
+          left: 0;
+          right: 0;
+          z-index: 1;
+
+          &.hidden {
+            overflow: hidden;
+          }
+        } */
+
+        .card-body {
+          position: relative;
+          background: $back-card;
+          font-size: 2rem;
+          color: $icon-gold;
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
+
+          img {
+            height: 360px !important;
+
+            &:hover {
+              position: relative;
+              filter: opacity(0.4);
+              -webkit-transform: rotateY(180deg);
+              -webkit-transform-style: preserve-3d;
+              transform: rotateY(180deg);
+              transform-style: preserve-3d;
+              z-index: 0;
+            }
+          }
+        }
+
+        .list-group-item {
+          background: $back-card;
+          color: $white;
+          text-decoration: none;
+
+          .year-type {
+            font-weight: 900;
+            letter-spacing: 0.5px;
+            border-bottom: 3px solid #e12b5f !important;
+            font-size: 0.9rem;
+            text-transform: uppercase;
+            width: 42px !important;
+            font-weight: 700;
+            width: 38px;
+            border-bottom: none;
+          }
+        }
+
+        &:hover {
+          box-shadow: 0px 5px 24px 14px $border-card;
+        }
       }
-  
-      .list-group-item {
-        background: #1f1e1e;
-      }
-    }
-  
-    .year-type {
-      font-weight: 900;
-      letter-spacing: 0.5px;
-      border-bottom: 3px solid #e12b5f !important;
-      font-size: 0.9rem;
-      text-transform: uppercase;
-      width: 42px !important;
-      font-weight: 700;
-      width: 38px;
-      border-bottom: none;
     }
   }
 }
@@ -168,6 +210,7 @@ body {
 }
 
 /* Styles Detail Movie */
+
 .bg-card {
   border: 1px solid #b95d5d;
   max-width: 100%;
@@ -196,6 +239,11 @@ body {
       border: 1px solid $white;
       color: $white;
       width: 110px;
+
+      &:hover {
+        border: none;
+        font-weight: 600;
+      }
     }
 
     .year-color {
@@ -213,6 +261,7 @@ body {
       font-size: 1.2rem;
     }
   }
+
 }
 
 /* Styles Welcome */
