--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -6,21 +6,21 @@
   </div>
 
   <div class="panel-body wrapper">
-    <div class="w-100 d-flex justify-content-between align-items-start mb-4">
-      <span class="badge my-badge-warning text-white align-items-center p-2">
-        Filtered by: {{ movieSearched }}
-      </span>
-
-      <div class="w-25 d-flex flex-row">
+    <div class="w-100 d-flex flex-column justify-content-center align-items-center center-block mb-4">
+      <div class="w-50 d-flex flex-row mb-4">
         <input
           type="text"
           class="form-control search"
           id="movies"
           aria-describedby="movieshelp"
-          placeholder="Search movies"
+          placeholder="&#xf002; Search movies"
           [(ngModel)]="movieSearched"
         />
       </div>
+
+      <span class="d-flex align-self-start badge my-badge-warning text-white p-2">
+        Filtered by: {{ movieSearched }}
+      </span>
     </div>
 
     <!-- List Movies -->
@@ -34,7 +34,6 @@
             </h3>
 
             <div class="card-body pt-0">
-              <i class="fas fa-video watch hidden"></i>
               <img class="img-thumbnail" *ngIf="movies.Poster" (error)="movies.Poster = false" [src]="movies.Poster"
                 [title]="movies.Title" />
               <img *ngIf="!movies.Poster" src="./assets/images/no-image.png"
