General Styles Real Done

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -319,6 +319,11 @@ body {
       width: 100% !important;
     }
   }
+
+  .welcome-image {
+    width: 100%;
+    margin-top: 0;
+  }
 }
 
 @media (max-width: 599px) {
