--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,10 +10,12 @@ $white-light: #e0e0e0;
 $bordou: #8e0e00;
 $border-card: #8c3333;
 $text-input: #909;
+$border-bottom: #e12b5f;
 $gold: #e2c043;
 $icon-gold: #d8a718;
 $gradient-dark: #1f1c18;
 $back-card: #1f1e1e;
+$header-card: #333131;
 $gray: #839496;
 $pink: #f9a6a6;
 $color-badge: #cb4b16;
@@ -58,7 +60,7 @@ body {
   z-index: 0;
 }
 
-.contain-nav {
+.container-nav {
   padding: 17px 50px !important;
   font-size: large;
 
@@ -160,11 +162,11 @@ body {
       text-decoration: none !important;
 
       .new-card {
-        min-height: 607px;
+        min-height: 577px;
         border: none;
 
         .card-header {
-          background: $back-card;
+          background: $header-card;
 
           .text-title {
             font-size: 0.9rem;
@@ -206,17 +208,21 @@ body {
           background: $back-card;
           color: $white;
           text-decoration: none;
+          line-height: 64%;
 
           .year-type {
             font-weight: 900;
             letter-spacing: 0.5px;
-            border-bottom: 3px solid #e12b5f !important;
             font-size: 0.9rem;
             text-transform: uppercase;
-            width: 42px !important;
+            border-bottom: 3px solid $border-bottom !important;
+            width: 42px;
             font-weight: 700;
-            width: 38px;
             border-bottom: none;
+
+            &:hover {
+              color: #ff90af;
+            }
           }
         }
 
@@ -320,6 +326,33 @@ body {
     }
   }
 
+  .bg-card {
+    margin-bottom: 5rem;
+
+    .ng-body {
+      div {
+        flex-wrap: wrap-reverse !important;
+
+        .w-75 {
+          margin-bottom: 2rem;
+        }
+      }
+
+      .wrapper-image {
+        width: 100% !important;
+        margin-bottom: 2rem;
+      }
+
+      .detail-image img {
+        width: auto !important;
+      }
+
+      .ng-button {
+        width: 100%;
+      }
+    }
+  }
+
   .welcome-image {
     width: 100%;
     margin-top: 0;
@@ -329,5 +362,9 @@ body {
 @media (max-width: 599px) {
   .my-nav {
     height: 100px !important;
+  }
+
+  .container-nav .fa-film {
+    font-size: 2.5rem !important;
   }
 }
