--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <span class="fa fa-spinner spinner" *ngIf="loading"></span>
 
 <mat-toolbar class="navbar navbar-dark bg-dark text-white my-nav"></mat-toolbar>
-<div class="contain-nav d-flex justify-content-between">
-  <div class="d-flex flex-row">
+<div class="container-nav d-flex flex-wrap justify-content-between align-items-center">
+  <div class="d-flex flex-row align-items-center">
     <i class="page-title fas fa-film logo-footer mr-2"></i>
     <a class="page-title" href="#">{{ pageTitle }}</a>
   </div>
