--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -7,7 +7,7 @@
 
   <div class="panel-body wrapper">
     <div class="w-100 d-flex flex-column justify-content-center align-items-center center-block mb-4">
-      <div class="w-50 d-flex flex-row mb-4">
+      <div class="w-75 d-flex flex-row mb-4">
         <input
           type="text"
           class="form-control search"
@@ -33,7 +33,7 @@
               <p class="text-title text-white mt-2">{{ movies.Title }}</p>
             </h3>
 
-            <div class="card-body pt-0">
+            <div class="card-body d-flex justify-content-end align-items-end pt-0">
               <img class="img-thumbnail" *ngIf="movies.Poster" (error)="movies.Poster = false" [src]="movies.Poster"
                 [title]="movies.Title" />
               <img *ngIf="!movies.Poster" src="./assets/images/no-image.png"
@@ -45,7 +45,7 @@
                 <span class="year-type mr-2">Year:</span>
                 {{ movies.Year }}
               </li>
-              <li class="list-group-item">
+              <li class="list-group-item pb-3">
                 <span class="year-type mr-2">Type:</span>
                 {{ movies.Type }}
               </li>
